# CNAM-NFA037_2024-2025_Semestre2

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json
Seance01/: CMakeLists.txt
Seance01/Serie01/: CMakeLists.txt
Seance01/Serie01/Exercice01/: CMakeLists.txt  main.c
Seance01/Serie01/Exercice02/: CMakeLists.txt  main.c
Seance01/Serie02/: CMakeLists.txt
Seance01/Serie02/Exercice01/: CMakeLists.txt  main.c
Seance01/Serie02/Exercice02/: CMakeLists.txt  main.c
Seance01/Serie02/Exercice03/: CMakeLists.txt  main.c
Seance01/Serie02/Exercice04/: CMakeLists.txt  main.c
Seance01/Serie02/Exercice05/: CMakeLists.txt  main.c
Seance01/Serie02/Exercice06/: CMakeLists.txt  main.c
Seance01/Serie02/Exercice07/: CMakeLists.txt  main.c
Seance01/Serie02/Exercice08/: CMakeLists.txt  main.c
Seance01/Serie02/Exercice09/: CMakeLists.txt  main.c
Seance01/Serie02/Exercice10/: CMakeLists.txt  main.c
Seance01/Serie02/Exercice11/: CMakeLists.txt  main.c
Seance01/Serie02/Exercice12/: CMakeLists.txt  main.c
Seance01/Serie02/Exercice13/: resultat.txt
Seance01/Serie02/Exercice14/: resultat.txt
Seance01/Serie02/Exercice15/: CMakeLists.txt  main.c
Seance01/Serie02/Exercice16/: resultat.txt
Seance01/Serie02/Exercice17/: CMakeLists.txt  main.c
Seance01/Serie02/Exercice18/: CMakeLists.txt  main.c
Seance01/Serie02/Exercice19/: CMakeLists.txt  main.c
Seance01/Serie02/Exercice20/: CMakeLists.txt  main.c
Seance02/: CMakeLists.txt
Seance02/Serie03/: CMakeLists.txt
Seance02/Serie03/Exercice01/: CMakeLists.txt  main.c
Seance02/Serie03/Exercice02/: CMakeLists.txt  main.c
Seance02/Serie03/Exercice03/: CMakeLists.txt  main.c
Seance02/Serie03/Exercice04/: CMakeLists.txt  main.c
Seance02/Serie03/Exercice05/: CMakeLists.txt  main.c
Seance02/Serie03/Exercice06/: CMakeLists.txt  main.c
Seance02/Serie03/Exercice07/: CMakeLists.txt  main.c
Seance02/Serie03/Exercice08/: CMakeLists.txt  main.c
Seance02/Serie03/Exercice09/: CMakeLists.txt  main.c
Seance02/Serie03/Exercice10/: CMakeLists.txt  main.c
Seance02/Serie03/Exercice11/: CMakeLists.txt  main.c
Seance02/Serie03/Exercice12/: CMakeLists.txt  main.c
Seance02/Serie03/Exercice13/: CMakeLists.txt  main.c
Seance02/Serie03/Exercice14/: CMakeLists.txt  main.c
Seance02/Serie04/: CMakeLists.txt
Seance02/Serie04/Exercice01/: CMakeLists.txt  main.c
Seance02/Serie04/Exercice02/: CMakeLists.txt  main.c
Seance02/Serie04/Exercice03/: CMakeLists.txt  main.c
Seance02/Serie04/Exercice04/: CMakeLists.txt  main.c
Seance02/Serie04/Exercice05/: CMakeLists.txt  main.c
Seance02/Serie04/Exercice06/: CMakeLists.txt  main.c
Seance02/Serie04/Exercice07/: CMakeLists.txt  main.c
Seance02/Serie04/Exercice08/: CMakeLists.txt  main.c
Seance02/Serie04/Exercice09/: CMakeLists.txt  main.c
Seance02/Serie04/Exercice10/: CMakeLists.txt  main.c
Seance02/Serie04/Exercice11/: CMakeLists.txt  main.c
Seance02/Serie04/Exercice12/: CMakeLists.txt  main.c
Seance02/Serie04/Exercice13/: CMakeLists.txt  main.c
Seance02/Serie04/Exercice14/: CMakeLists.txt  main.c
Seance02/Serie04/Exercice15/: CMakeLists.txt  main.c
Seance02/Serie04/Exercice16/: CMakeLists.txt  main.c
Seance02/Serie04/Exercice17/: CMakeLists.txt  main.c
Seance03/: CMakeLists.txt
Seance03/Serie05/: CMakeLists.txt
Seance03/Serie05/Exercice01/: CMakeLists.txt  main.c
Seance03/Serie05/Exercice02/: CMakeLists.txt  main.c
Seance03/Serie05/Exercice03/: CMakeLists.txt  main.c
Seance03/Serie05/Exercice04/: CMakeLists.txt  main.c
Seance03/Serie05/Exercice05/: CMakeLists.txt  main.c
Seance03/Serie05/Exercice06/: CMakeLists.txt  main.c
Seance03/Serie05/Exercice07/: CMakeLists.txt  main.c
Seance03/Serie05/Exercice08/: CMakeLists.txt  main.c
Seance03/Serie05/Exercice09/: CMakeLists.txt  main.c
Seance03/Serie05/Exercice10/: CMakeLists.txt  main.c
Seance03/Serie05/Exercice11/: CMakeLists.txt  main.c
Seance03/Serie05/Exercice12/: CMakeLists.txt  main.c
Seance03/Serie05/Exercice13/: CMakeLists.txt  main.c
Seance03/Serie05/Exercice14/: CMakeLists.txt  main.c
Seance03/Serie05/Exercice15/: CMakeLists.txt  main.c
Seance03/Serie05/Exercice16/: CMakeLists.txt  main.c
Seance03/Serie05/Exercice17/: CMakeLists.txt  main.c
Seance03/Serie05/Exercice18/: CMakeLists.txt  main.c
Seance03/Serie05/Exercice19/: CMakeLists.txt  main.c
Seance04/: CMakeLists.txt
Seance04/Serie06/: CMakeLists.txt
Seance04/Serie06/Exercice01/: CMakeLists.txt  main.c
Seance04/Serie06/Exercice02/: CMakeLists.txt  main.c
Seance04/Serie06/Exercice03/: CMakeLists.txt  main.c
Seance04/Serie06/Exercice03bis/: CMakeLists.txt  main.c
Seance04/Serie06/Exercice04/: CMakeLists.txt  main.c
Seance04/Serie06/Exercice05/: CMakeLists.txt  main.c
Seance04/Serie06/Exercice06/: CMakeLists.txt  main.c
Seance04/Serie06/Exercice07/: CMakeLists.txt  main.c
Seance04/Serie06/Exercice08/: CMakeLists.txt  main.c
Seance04/Serie06/Exercice09/: CMakeLists.txt  main.c
Seance04/Serie06/Exercice10/: CMakeLists.txt  main.c
Seance04/Serie06/Exercice11/: CMakeLists.txt  main.c
Seance04/Serie06/Exercice12/: CMakeLists.txt  main.c
Seance04/Serie06/Exercice13/: CMakeLists.txt  main.c
Seance04/Serie06/Exercice14/: CMakeLists.txt  main.c
Seance05/: CMakeLists.txt
Seance05/Serie07/: CMakeLists.txt
Seance06/: CMakeLists.txt
Seance06/Serie08/: CMakeLists.txt
Seance07/: CMakeLists.txt
Seance07/Serie09/: CMakeLists.txt
Seance08/: CMakeLists.txt
Seance08/Serie10/: CMakeLists.txt
Seance08/Serie10/Exercice20/: CMakeLists.txt  main.c
Seance09/: CMakeLists.txt
Seance09/Serie11/: CMakeLists.txt
Seance09/Serie11/Exercice01/: CMakeLists.txt  main.c
Seance09/Serie11/Exercice02/: CMakeLists.txt  main.c
Seance09/Serie11/Exercice03/: CMakeLists.txt  main.c
Seance09/Serie11/Exercice04/: CMakeLists.txt  main.c
Seance09/Serie11/Exercice06/: CMakeLists.txt  main.c
Seance09/Serie11/Exercice07/: CMakeLists.txt  main.c
Seance09/Serie11/Exercice_cours_Queue/: CMakeLists.txt  main.c
Seance09/Serie11/Exercice_cours_Stack/: CMakeLists.txt  main.c
(+166 files in other folders)
